--- a/css/main.css
+++ b/css/main.css
@@ -12,21 +12,26 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  color: #3f1622;
+  text-decoration: none;
+}
+
 img {
   width: 100%;
 }
 
 figcaption {
   font-family: "PT Serif", serif;
-  font-size: 0.8rem;
+  font-size: 1.125rem;
   font-style: italic;
   text-align: center;
 }
 
 .p1 {
-  font-family :"PT Serif", serif;
+  font-family: "PT Serif", serif;
   font-size: 1.125rem;
-  font-weight: bold;
+  font-weight: normal;
   text-align: left;
 }
 
@@ -86,5 +91,5 @@ ul {
 }
 
 .wiki {
-  font-family: "PT Serif", serif
+  font-family: "PT Serif", serif;
 }
